[gd_scene load_steps=6 format=3 uid="uid://c8xk5nan2pq7r"]

[ext_resource type="Script" uid="uid://do8w3v7804e2o" path="res://UI/Layouts/overview_layout.gd" id="1_overview"]
[ext_resource type="PackedScene" uid="uid://c2oam8k4px5wq" path="res://UI/RadarView/radar_view.tscn" id="2_radar"]
[ext_resource type="PackedScene" uid="uid://b7xjm2qaqk5tn" path="res://UI/MetricPanel/metric_panel.tscn" id="3_metric"]
[ext_resource type="PackedScene" uid="uid://xwb2lctkdfv5" path="res://UI/ClubSelector/club_selector.tscn" id="4_club"]
[ext_resource type="PackedScene" uid="uid://c8xk5nan3pq8s" path="res://UI/Layouts/unified_header.tscn" id="5_header"]

[node name="OverviewLayout" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_overview")

[node name="Background3D" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.1, 0.15, 0.1, 0)

[node name="FloatingHUD" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 80.0
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="LeftControls" type="VBoxContainer" parent="FloatingHUD"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 100.0
grow_vertical = 2
theme_override_constants/separation = 20

[node name="RightOverlay" type="Control" parent="FloatingHUD"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -300.0
offset_right = -10.0
offset_bottom = 300.0
grow_horizontal = 0
grow_vertical = 2

[node name="RadarView" parent="FloatingHUD/RightOverlay" instance=ExtResource("2_radar")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 92.0
offset_bottom = -92.0
grow_horizontal = 2
grow_vertical = 2

[node name="TelemetryFooter" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -120.0
grow_horizontal = 2
grow_vertical = 0

[node name="FooterContainer" type="HBoxContainer" parent="TelemetryFooter"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="SpeedPanel" parent="TelemetryFooter/FooterContainer" instance=ExtResource("3_metric")]
layout_mode = 2
size_flags_horizontal = 3

[node name="VSeparator1" type="VSeparator" parent="TelemetryFooter/FooterContainer"]
layout_mode = 2

[node name="LaunchPanel" parent="TelemetryFooter/FooterContainer" instance=ExtResource("3_metric")]
layout_mode = 2
size_flags_horizontal = 3

[node name="VSeparator2" type="VSeparator" parent="TelemetryFooter/FooterContainer"]
layout_mode = 2

[node name="SpinPanel" parent="TelemetryFooter/FooterContainer" instance=ExtResource("3_metric")]
layout_mode = 2
size_flags_horizontal = 3

[node name="VSeparator3" type="VSeparator" parent="TelemetryFooter/FooterContainer"]
layout_mode = 2

[node name="DistancePanel" parent="TelemetryFooter/FooterContainer" instance=ExtResource("3_metric")]
layout_mode = 2
size_flags_horizontal = 3

[node name="VSeparator4" type="VSeparator" parent="TelemetryFooter/FooterContainer"]
layout_mode = 2

[node name="DeviationPanel" parent="TelemetryFooter/FooterContainer" instance=ExtResource("3_metric")]
layout_mode = 2
size_flags_horizontal = 3

[node name="ClubSelector" parent="." instance=ExtResource("4_club")]
layout_mode = 1
offset_left = 2.0
offset_top = 79.0
offset_right = 164.0
offset_bottom = 148.0

[node name="TopBar" parent="." instance=ExtResource("5_header")]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = 65.0
grow_horizontal = 2
next_layout_text = "Custom >"

[connection signal="club_selected" from="ClubSelector" to="." method="_on_club_selector_club_selected"]
